--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "mongos": "^0.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
